# MaaObjectModel

./: CMakeLists.txt
include/: MaaObjectModel.h
include/MaaObjectModel/: class.h  error.h  id.h  memory.h  object.h  port.h  result.h  string.h  type.h  utils.h
src/: class.cpp  error.cpp  id.cpp  memory.cpp  object.cpp  string.cpp
test/: main.cpp  tc.cpp  tc.h
